- Print the version in the status chat
- Slight background changes