@@ -1,2 +1,3 @@
 - Print the version in the status chat
 - Slight background changes
+- Fixed the mod crashing in case of modded races not having their own chatting sounds
